public class MuteQuack implements QuackBahavior{
    public void quack(){
        System.out.println("<< silance >>");
    }
}
