public class Quack implements QuackBahavior{

    public void quack(){
        System.out.println("quack quack quack quack");
    }
}
