public interface QuackBahavior {
    public void quack();
}
