public class Squack implements QuackBahavior {

    public void quack(){
        System.out.println("Squack squack squack");
    }
}
