@startuml

title __SIMUDUCKAPP's Class Diagram__\n

  package  {
    abstract class Duck {
    }
  }
  

  package  {
    interface FlyBehavior {
    }
  }
  

  package  {
    class FlyNoWay {
    }
  }
  

  package  {
    class FlyWithWings {
    }
  }
  

  package  {
    class MallardDuck {
    }
  }
  

  package  {
    class MiniDuckSimulatior {
    }
  }
  

  package  {
    class MuteQuack {
    }
  }
  

  package  {
    class Quack {
    }
  }
  

  package  {
    interface QuackBahavior {
    }
  }
  

  package  {
    class Squack {
    }
  }
  

  Duck o-- FlyBehavior : flyBehavior
  Duck o-- QuackBahavior : quackBahavior
  FlyNoWay -up-|> FlyBehavior
  FlyWithWings -up-|> FlyBehavior
  MallardDuck -up-|> Duck
  MuteQuack -up-|> QuackBahavior
  Quack -up-|> QuackBahavior
  Squack -up-|> QuackBahavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
